- Add support for Shoryuken (AWS SQS) {pull}674[#674]

[float]
===== Changed

- Allow action dispatch spy to be disabled via `disabled_instrumentations` {pull}657[#657]

[float]
===== Fixed

- Fix Rails Console detection when top-level `Console` constant defined {pull}664[#664]
- Fix a few Ruby 2.7 related deprecation warnings {pull}667[#667]

[[release-notes-3.3.0]]
==== 3.3.0 (2019-12-05)

[float]
===== Added

- Add option `disable_metrics` {pull}625[#625]

[float]
===== Fixed

- Make Filters thread-safe {pull}624[#624]
- Omit passwords in outgoing urls {pull}629[#629]
- Add missing mutex to Counter metrics {pull}636[#636]
- Correct span context collection name for Mongo getMore commands {pull}637[#637]

[[release-notes-3.2.0]]
==== 3.2.0 (2019-11-19)

[float]
===== Added

- Add Grape support. {pull}562[#562]
- Add Breakdown Metrics {pull}526[#526]

[float]
===== Changes

- Set remote_addr to immediate socket {pull}615[#615]

[float]
===== Fixed

- Fixed pulling config from Kibana {pull}594[#594]
- Fixed a bug where the agent would alter the original cookies hash {pull}616[#616]

[[release-notes-3.1.0]]
==== 3.1.0 (2019-10-21)

[float]
===== Added

- Add `ElasticAPM::Sinatra.start` API. {pull}556[#566]

[float]
===== Changes

- Log 404s from CentralConfig on debug level {pull}553[#553]

[float]
===== Fixed

- Fix Central Config url path {pull}578[#578]

[[release-notes-3.0.0]]
==== 3.0.0 (2019-10-08)

[float]
===== Breaking Changes

The following changes are breaking, as they may change the way data is grouped or shown in Kibana or how your app
defines agent settings.

- Decrease stack_trace_limit to 50 {pull}515[#515]
- Errors' `message` no longer include their `type` {pull}323[#323]
- External request spans now have type `external.http.{library}` {pull}514[#514]
- Durations are measured using monotonic time {pull}550[#550]
- Rename set_tag to set_label {pull}543[#543]
- Rename disabled_spies to disabled_instrumentations {pull}539[#539]

[[release-notes-2.x]]